# drtrace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-npm.yml  deploy-pip.yml
agents/: CONTRIBUTING.md  daemon-method-selection.md  log-analysis.md  log-help.md  log-init.md  log-it.md
agents/integration-guides/: cpp-best-practices.md  cpp-ros-integration.md
docs/: agent-design-best-practices.md  api-reference.md  architecture.md  config-guide.md  cross-language-querying.md  daemon-interaction-guide.md  init-project-workflow.md  log-help-agent-guide.md  log-init-agent-guide.md  log-it-agent-guide.md  log-schema.md  overview.md  quickstart.md  typescript-setup.md  version-downgrade-design.md  versioning.md
docs/architectures/: agent-interface-design.md  client-multiprocess-design.md  design-rules.md  docker-image-distribution-design.md  docker-setup-design.md  log-init-and-log-help-agents-design.md  npm-typescript-config-design.md
examples/: example-express-app.ts  example-flask-app.py  init_project_example.py  minimal_cpp_app.cpp  minimal_cpp_app_direct.cpp  minimal_python_app.py  quickstart_example.py
examples/agent-integrations/: README.md  (+2 more)
examples/python-cpp-multi-language/: CMakeLists.txt  README.md  cpp_component.cpp  python_main.py  python_service.py
examples/python-typescript-app/backend/: main.py  pyproject.toml
scripts/: init_db.py  publish-npm.sh  publish-pypi.sh  sync-versions.sh  version_downgrade.py
tests/: test_version_downgrade.py
(+13 files in other folders)
