[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-typescript-example-backend"
version = "0.1.0"
description = "FastAPI backend for cross-language example"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30"
]
